tests/ui/fail/derive_default.rs
use nnn::nnn;

#[nnn(derive(Default))]
struct DefaultFloat(f64);

fn main() {}
